@startuml
abstract class FloraWeddingHall.system.Package
annotation java.lang.Override
class FloraWeddingHall.GUI.BookHallGUI
class FloraWeddingHall.GUI.PaymentGUI
class FloraWeddingHall.system.ApplePayPayment
class FloraWeddingHall.system.BirthdayPartyPackage
class FloraWeddingHall.system.BookingProxy
class FloraWeddingHall.system.CashPayment
class FloraWeddingHall.system.CorporateEventPackage
class FloraWeddingHall.system.Customer
class FloraWeddingHall.system.Database
class FloraWeddingHall.system.FloraFacade
class FloraWeddingHall.system.PackageFactory
class FloraWeddingHall.system.PayPalPayment
class FloraWeddingHall.system.Payment
class FloraWeddingHall.system.RealBooking
class FloraWeddingHall.system.Response
class FloraWeddingHall.system.SingletonManager
class FloraWeddingHall.system.WeddingPackage

interface FloraWeddingHall.system.Booking
interface FloraWeddingHall.system.PaymentStrategy
FloraWeddingHall.system.Package ..> java.util.ArrayList
FloraWeddingHall.system.Package ..> java.util.List
FloraWeddingHall.system.ApplePayPayment ..> java.lang.Override
FloraWeddingHall.system.ApplePayPayment ..> FloraWeddingHall.GUI.BookHallGUI
FloraWeddingHall.system.ApplePayPayment ..> FloraWeddingHall.GUI.PaymentGUI
FloraWeddingHall.system.ApplePayPayment ..> java.awt.GridLayout
FloraWeddingHall.system.ApplePayPayment ..> javax.swing.JButton
FloraWeddingHall.system.ApplePayPayment ..> javax.swing.JFrame
FloraWeddingHall.system.ApplePayPayment ..> javax.swing.JLabel
FloraWeddingHall.system.ApplePayPayment ..> javax.swing.JOptionPane
FloraWeddingHall.system.ApplePayPayment ..> javax.swing.JTextField
FloraWeddingHall.system.ApplePayPayment --|> FloraWeddingHall.system.PaymentStrategy
FloraWeddingHall.system.BirthdayPartyPackage --|> FloraWeddingHall.system.Package
FloraWeddingHall.system.BirthdayPartyPackage ..> java.lang.Override
FloraWeddingHall.system.BookingProxy ..> java.lang.Override
FloraWeddingHall.system.BookingProxy ..> java.util.Date
FloraWeddingHall.system.BookingProxy --|> FloraWeddingHall.system.Booking
FloraWeddingHall.system.CashPayment ..> java.lang.Override
FloraWeddingHall.system.CashPayment ..> FloraWeddingHall.GUI.PaymentGUI
FloraWeddingHall.system.CashPayment --|> FloraWeddingHall.system.PaymentStrategy
FloraWeddingHall.system.CorporateEventPackage --|> FloraWeddingHall.system.Package
FloraWeddingHall.system.CorporateEventPackage ..> java.lang.Override
FloraWeddingHall.system.Database ..> java.sql.Connection
FloraWeddingHall.system.Database ..> java.sql.DriverManager
FloraWeddingHall.system.Database ..> java.sql.PreparedStatement
FloraWeddingHall.system.Database ..> java.sql.ResultSet
FloraWeddingHall.system.Database ..> java.sql.SQLException
FloraWeddingHall.system.Database ..> java.sql.Statement
FloraWeddingHall.system.Database ..> java.util.ArrayList
FloraWeddingHall.system.Database ..> java.util.List
FloraWeddingHall.system.FloraFacade ..> java.sql.SQLException
FloraWeddingHall.system.PayPalPayment ..> java.lang.Override
FloraWeddingHall.system.PayPalPayment ..> FloraWeddingHall.GUI.PaymentGUI
FloraWeddingHall.system.PayPalPayment --|> FloraWeddingHall.system.PaymentStrategy
FloraWeddingHall.system.Payment ..> java.awt.Color
FloraWeddingHall.system.Payment ..> java.awt.Component
FloraWeddingHall.system.Payment ..> java.awt.Font
FloraWeddingHall.system.Payment ..> java.time.LocalDate
FloraWeddingHall.system.Payment ..> java.util.Date
FloraWeddingHall.system.Payment ..> javax.swing.Box
FloraWeddingHall.system.Payment ..> javax.swing.BoxLayout
FloraWeddingHall.system.Payment ..> javax.swing.JButton
FloraWeddingHall.system.Payment ..> javax.swing.JFrame
FloraWeddingHall.system.Payment ..> javax.swing.JLabel
FloraWeddingHall.system.Payment ..> javax.swing.JPanel
FloraWeddingHall.system.Payment ..> javax.swing.JTextArea
FloraWeddingHall.system.Payment ..> javax.swing.SwingConstants
FloraWeddingHall.system.RealBooking ..> java.lang.Override
FloraWeddingHall.system.RealBooking ..> java.sql.SQLException
FloraWeddingHall.system.RealBooking --|> FloraWeddingHall.system.Booking
FloraWeddingHall.system.SingletonManager ..> java.sql.Connection
FloraWeddingHall.system.SingletonManager ..> java.sql.PreparedStatement
FloraWeddingHall.system.SingletonManager ..> java.sql.ResultSet
FloraWeddingHall.system.SingletonManager ..> java.sql.SQLException
FloraWeddingHall.system.WeddingPackage --|> FloraWeddingHall.system.Package
FloraWeddingHall.system.WeddingPackage ..> java.lang.Override
FloraWeddingHall.system.Booking ..> java.util.Date
@enduml